<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    tools:context="com.example.qntest.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="back"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_chevron_left"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/phone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/otp_diag"
                    android:textColor="#3d3d3d"
                    android:textSize="17sp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/phno_diag"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/proceed_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="continue_login"
                    android:text="@string/proceed"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:id="@+id/otpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/otp_wait_diag"
                        android:textColor="#3d3d3d"
                        android:textSize="17sp"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="18dp">

                        <EditText
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="10"
                            android:hint="@string/otp_text"
                            android:inputType="phone" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/otp_confirm_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:onClick="confirmOTP"
                        android:text="@string/confirm"
                        android:textColor="@color/colorWhite"/>

                    <Button
                        android:id="@+id/resend_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/resend_otp"
                        android:textColor="@color/colorWhite"
                        android:visibility="invisible"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
